--- a/public/assets/Style.css
+++ b/public/assets/Style.css
@@ -16,13 +16,14 @@ body {
 .login-contenedor h1 {
   text-align: center;
   font-size: 24px;
-  font-weight: 500;
+  font-weight: bold;
   margin: 0 0 15px 0;
   color: #333;
 }
 
 .login-contenedor .login-texto {
   font-size: 16px;
+  font-weight: bold;
   color: #333;
   text-align: center;
   margin-bottom: 25px;
@@ -33,8 +34,8 @@ body {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: bold;
   color: #fff;
   width: 100%;
   border-radius: 5px;
@@ -44,26 +45,26 @@ body {
   box-sizing: border-box;  /* Para que el padding no afecte el tamaño total */
 }
 
-.login-contenedor .google-login-boton .logo {
+.login-contenedor .google-login-boton {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   background-color: #388E3C;
   margin-right: 15px;
   padding: 10px;
-  border-radius: 50%;
 }
 
-.login-contenedor .google-login-boton .logo img {
-  width: 20px; /* Tamaño del logo de Google */
-  height: 20px;
+.login-contenedor .google-login-boton .logo{
+  width: 27px; /* Tamaño del logo de Google */
+  height: 27px;
+  display: flex;
 }
 
 .login-contenedor .google-login-boton:hover {
   background-color: #45A049;
 }
 
-.login-contenedor .google-login-boton:hover .logo {
+.login-contenedor .google-login-boton:hover {
   background-color: #2C6E27;
 }
 
@@ -72,4 +73,14 @@ body {
   text-align: center;
 }
 
+img{
+  width: 25px;
+  height: 25px;
+}
 
+.logo {
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 75%;
+}
